# ACE-Step-1.5

./: .gitignore  README.md  Roadmap.md  check_update.bat  cli.py  generate_examples.py  pyproject.toml  requirements.txt  run_cpu.sh  run_gpu.sh  start_gradio_ui.bat  train.py
.Jules/: palette.md
acestep/: acestep_v15_pipeline.py  api_server.py  api_training_routes.py  audio_utils.py  constants.py  constrained_logits_processor.py  dit_alignment_score.py  gpu_config.py  handler.py  inference.py  llm_inference.py
acestep/gradio_ui/events/: __init__.py  generation_handlers.py  history_handlers.py  init_handlers.py  results_handlers.py  training_handlers.py
acestep/gradio_ui/i18n/: en.json  ja.json  zh.json
acestep/gradio_ui/interfaces/: __init__.py  generation.py  history.py  result.py  training.py
acestep/models/base/: modeling_acestep_v15_base.py
acestep/models/sft/: modeling_acestep_v15_base.py
acestep/models/turbo/: modeling_acestep_v15_turbo.py
acestep/training/: api_handlers.py  configs.py  data_module.py  dataset_builder.py  trainer.py
acestep/training/dataset_builder_modules/: audio_io.py  preprocess_audio.py
acestep/training_v2/: configs.py  model_loader.py  preprocess.py  trainer_vanilla.py
acestep/training_v2/cli/: common.py
acestep/training_v2/ui/: wizard.py
datasets/: my_lora_dataset.json
docs/en/: CLI.md  GPU_TROUBLESHOOTING.md  GRADIO_GUIDE.md
frontend/: build_esbuild.cjs  lint_output.txt  package-lock.json  package.json  react-shim.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/common/: AudioPlayer.jsx  SettingsLabel.jsx  index.js
frontend/src/components/dataset/: DatasetExplorer.jsx
frontend/src/components/generation/: GenerationTab.jsx  ResultsPanel.jsx  ServiceConfigPanel.jsx
frontend/src/components/training/: DatasetBuilder.jsx  TrainingPanel.jsx  TrainingTab.jsx
frontend/src/components/ui/: tooltip.jsx
frontend/src/stores/: appStore.js  generationStore.js  trainingStore.js
my_audio/: beat7_prompt.txt  beat8_lyrics.txt
openrouter/: openrouter_api_server.py
playground/: playground.md  playground_human.md  playground_ui.py  studio_api.md  studio_client.py
scripts/: check_gpu.py
