[project]
name = "ace-step"
version = "1.5.0"
description = "ACE-Step 1.5"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "MIT"}
dependencies = [
    # PyTorch for Windows with CUDA 12.8
    "torch==2.7.1+cu128; sys_platform == 'win32'",
    "torchvision==0.22.1+cu128; sys_platform == 'win32'",
    "torchaudio==2.7.1+cu128; sys_platform == 'win32'",
    # PyTorch for Linux with CUDA 12.8
    "torch==2.10.0+cu128; sys_platform == 'linux'",
    "torchvision==0.25.0+cu128; sys_platform == 'linux'",
    "torchaudio==2.10.0+cu128; sys_platform == 'linux'",
    ## PyTorch for Linux with ROCm 7.2
    ## [!] Note the versions of torch and torchaudio differ. These are
    ## the recommended versions from AMD's website.
    # "torch==2.9.1; sys_platform == 'linux'",
    # "torchvision; sys_platform == 'linux'",
    # "torchaudio==2.9.0; sys_platform == 'linux'",
    # "triton",
    # PyTorch for macOS (CPU / MPS)
    "torch>=2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torchvision; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "torchaudio>=2.9.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Common dependencies
    "transformers>=4.51.0,<4.58.0",
    "diffusers",
    "gradio==6.2.0",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
    "soundfile>=0.13.1",
    "loguru>=0.7.3",
    "einops>=0.8.1",
    "accelerate>=1.12.0",
    "fastapi>=0.110.0",
    "diskcache",
    "uvicorn[standard]>=0.27.0",
    "numba>=0.63.1",
    "vector-quantize-pytorch>=1.27.15",
    "torchcodec>=0.9.1",
    "torchao",
    "toml",
    # MLX dependencies (Apple Silicon native acceleration - macOS only)
    "mlx>=0.25.2; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.20.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Training dependencies
    "peft>=0.18.0",
    "lightning>=2.0.0",
    "tensorboard>=2.0.0",
    # Local third-party packages
    # nano-vllm is a local package - install separately: pip install -e acestep/third_parts/nano-vllm
    # For uv users: automatically handled via [tool.uv.sources]
    "modelscope",
    "tensorboard>=2.20.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
nano-vllm = { path = "acestep/third_parts/nano-vllm" }
## CUDA 12.8 wheels
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
## ROCm 7.2 wheels, from AMD:
## https://rocm.docs.amd.com/projects/radeon-ryzen/en/latest/docs/install/installrad/native_linux/install-pytorch.html
# torch = [
#   { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torch-2.9.1%2Brocm7.2.0.lw.git7e1940d4-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
# ]
# torchvision = [
#   { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchvision-0.24.0%2Brocm7.2.0.gitb919bd0c-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
# ]
# torchaudio = [
#   { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/torchaudio-2.9.0%2Brocm7.2.0.gite3c6ee2b-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
# ]
# triton = [
#   { url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-7.2/triton-3.5.1%2Brocm7.2.0.gita272dfa8-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux'" },
# ]

[project.scripts]
acestep = "acestep.acestep_v15_pipeline:main"
acestep-api = "acestep.api_server:main"
acestep-download = "acestep.model_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["acestep"]
